# PythonBlank

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
src/: main.py
src/pythonblank/: main.py
tests/: test_main.py
